...
    <string name="settings_debug_simulate_mobile">Using mobile preset</string>
    <string name="settings_debug_simulate_roaming">Using roaming preset</string>
    <string name="settings_autodownload_summary_photos">Photos</string>
    <string name="settings_autodownload_summary_videos">Videos (%s)</string>
    <string name="settings_autodownload_summary_gifs">GIFs (%s)</string>
    <string name="settings_autodownload_summary_files">Files (%s)</string>
    <string name="settings_chat">Appearance</string>
    <string name="settings_chat_sub">Theme, wallpapers, and chat list</string>
    <string name="settings_folders">Folders</string>
    <string name="settings_folders_sub">Chat folders from Telegram</string>
    <string name="settings_folders_add">New folder</string>
    <string name="settings_folders_refresh">Refresh folders</string>
    <string name="settings_save">Save</string>
    <string name="settings_monogram_channel">Channel</string>
...
